# SlicerT1_ECVMapping

./: CMakeLists.txt  README.md
Dicom Examples/IR_TFE_BH (7)/: 1.dcm  2.dcm  3.dcm
Dicom Examples/LL-NATIVO/: 1.dcm  10.dcm  11.dcm  12.dcm  13.dcm  14.dcm  15.dcm  16.dcm  17.dcm  18.dcm  19.dcm  2.dcm  20.dcm  21.dcm  22.dcm  23.dcm  24.dcm  25.dcm  26.dcm  27.dcm  28.dcm  29.dcm  3.dcm  30.dcm  31.dcm  32.dcm  33.dcm  34.dcm  35.dcm  36.dcm  37.dcm  38.dcm  39.dcm  4.dcm  40.dcm  41.dcm  42.dcm  43.dcm  44.dcm  45.dcm  (+20 more)
Dicom Examples/LL-POST/: 1.dcm  10.dcm  11.dcm  12.dcm  13.dcm  14.dcm  15.dcm  16.dcm  17.dcm  18.dcm  19.dcm  2.dcm  20.dcm  21.dcm  22.dcm  23.dcm  24.dcm  25.dcm  26.dcm  27.dcm  28.dcm  29.dcm  3.dcm  30.dcm  31.dcm  32.dcm  33.dcm  34.dcm  35.dcm  36.dcm  37.dcm  38.dcm  39.dcm  4.dcm  40.dcm  41.dcm  42.dcm  43.dcm  44.dcm  45.dcm  (+20 more)
Dicom Examples/T1_enhanced/: 1.dcm  10.dcm  11.dcm  12.dcm  13.dcm  14.dcm  15.dcm  16.dcm  17.dcm  18.dcm  19.dcm  2.dcm  20.dcm  21.dcm  22.dcm  23.dcm  24.dcm  25.dcm  26.dcm  27.dcm  28.dcm  29.dcm  3.dcm  30.dcm  31.dcm  32.dcm  33.dcm  34.dcm  35.dcm  36.dcm  37.dcm  38.dcm  39.dcm  4.dcm  40.dcm  41.dcm  42.dcm  43.dcm  44.dcm  45.dcm  (+16 more)
Dicom Examples/T1_native/: 1.dcm  10.dcm  11.dcm  12.dcm  13.dcm  14.dcm  15.dcm  16.dcm  17.dcm  18.dcm  19.dcm  2.dcm  20.dcm  21.dcm  22.dcm  23.dcm  24.dcm  25.dcm  26.dcm  27.dcm  28.dcm  29.dcm  3.dcm  30.dcm  31.dcm  32.dcm  4.dcm  41.dcm  42.dcm  5.dcm  51.dcm  52.dcm  6.dcm  7.dcm  8.dcm  9.dcm
T1_ECVMapping/: CMakeLists.txt  T1_ECVMapping.py
T1_ECVMapping/Resources/UI/: T1_ECVMapping.ui
